--- a/css/style.less
+++ b/css/style.less
@@ -1,10 +1,14 @@
 //Main settings
 html {
+    overflow-x: hidden;
     font-size: 10px;
     scroll-behavior: smooth;
+    height: 100vh;
+    width: 100%;
 
 }
 body {
+    overflow-x: hidden;
     height: 100vh;
     width: 100%;
 }
@@ -268,8 +272,9 @@ footer {
     .work {
         &-content {
             &-block {
-                padding: 2rem;
-                margin: 2rem;
+                min-height: 24rem;
+                padding: 2.5rem;
+                margin-top: 2.5rem;
                 border: 3px solid #FC557C;
             }
         }
@@ -293,4 +298,59 @@ footer {
             margin: 0 auto;
         }
     }
+}
+
+@media(max-width: 500px) {
+
+    .main {
+        &-content {
+            h1 {
+                font-size: 4rem;
+            }
+            .human-img {
+                display: none;
+            }
+
+        }
+    }
+    .work {
+        &-header {
+            h2 {
+                font-size: 3.5rem;
+            }
+        }
+        &-btn {
+           margin: 0;
+           padding: 0; 
+        }
+        &-content {
+            &-block {
+            padding: 2rem 0;
+            p {
+                max-width: 100%;
+            }
+            }
+        }
+    }
+    .portfolio {
+        &-header {
+            h2{
+                font-size: 3.5rem;
+            }
+
+        }
+    }
+    .adaptive {
+        &-header {
+            margin: 0;
+            text-align: center;
+            h3 {
+                font-size: 3rem;
+           }
+            margin: 0;
+        }
+
+
+    }
+
 }
